--- a/retry-web/views/partials/home.jade
+++ b/retry-web/views/partials/home.jade
@@ -5,10 +5,10 @@
   .row
     .col-sm-4
       h2 웹 애플리케이션
-      p 인터넷에 연결된 장치와 브라우저만 있다면 사용할 수 있습니다. NFC 리더와 같은 추가적인 장치가 필요하지 않습니다. 이것은 곧 총 소유 비용의 대폭 절감을 의미합니다.
+      p 인터넷에 연결된 장치와 브라우저만 있다면 사용할 수 있습니다. NFC 리더와 같은 추가적인 장치가 필요하지 않습니다. 이것은 곧 총 소유 비용이 대폭 절감된다는 것을 의미합니다.
     .col-sm-4
       h2 One-Time QR 코드
-      p 다시 입력하세요는 One-Time QR 코드를 사용하여 부정행위를 효과적으로 차단합니다. 현재는 QR 코드를 전용 모바일 애플리케이션에서만 읽을 수 있도록 하고 있지만, 플랫폼에 관계없이 일반적인 QR 코드 리더와 브라우저로도 사용할 수 있도록 개선할 수 있습니다. 또한 처리량 향상을 위하여, QR 코드 사용 가능 횟수를 직접 지정할 수 있도록 하는 융통성을 제공합니다.
+      p 다시 입력하세요는 One-Time QR 코드를 사용하여 부정행위를 효과적으로 차단합니다. 플랫폼에 관계없이 범용 QR 코드 리더 앱과 브라우저로 사용하도록 개발되었습니다. 또한 처리량 향상을 위하여, QR 코드 사용 가능 횟수를 직접 지정할 수 있도록 하는 융통성을 제공합니다.
     .col-sm-4
       h2 개방형 범용 서비스
       p 대학 강의만을 위한 전자 출결 서비스가 아닙니다. 동아리, 소모임, 대규모 행사, 치맥 파티, 그리고 전자 출결이 필요한 모든 다른 곳에서 사용할 수 있습니다.
