--- a/retry-web/views/partials/guide.jade
+++ b/retry-web/views/partials/guide.jade
@@ -7,6 +7,7 @@
     .col-md-6
       h2 세션 주최자
       ol
+        li 먼저 로그인하세요.
         li 세션을 생성하세요.
         li 세션 목록에서 세션 제목을 눌러 세션 상세 페이지로 들어가세요.
         li 세션 티켓 QR 코드를 보여 주세요.
@@ -14,5 +15,7 @@
     .col-md-6
       h2 세션 참가자
       ol
-        li 세션 주최자가 보여 주는 QR 코드를 스캔하세요.
+        li 먼저 로그인하세요.
+        li QR 코드 리더 앱을 이용하여 세션 주최자가 보여 주는 QR 코드를 스캔하고 해당 페이지에 접속하세요.
+        li 정상적으로 출석 처리가 이루어질 때까지 앞의 단계를 반복하세요.
         li 세션 상세 페이지에서 출석 정보를 언제나 확인할 수 있습니다.
