--- a/retry-web/views/partials/sessionDetail.jade
+++ b/retry-web/views/partials/sessionDetail.jade
@@ -20,37 +20,35 @@
           dd {{ sessionTimestamp | dateLocal }}
       tab(heading='QR 코드')
         p.text-center(ng-show='!isHost') 세션 주최자만 QR 코드를 확인할 수 있습니다.
+        div(ng-show='isHost')
+          img.img-responsive.center-block(ng-src='{{ imageUrl | trustAsUrl }}')
         div.text-center(ng-show='isHost')
-          img.img-qrcode(ng-src='{{ imageUrl | trustAsUrl }}')
+          a(ng-href='{{ codeUrl | trustAsUrl }}') 테스트
       tab(heading='티켓 사용 기록')
         p(ng-show='!attendances') 불러오는 중
-        table(ng-show='attendances')
+        p(ng-show='attendances && !attendances.length') 결과가 없습니다.
+        table.table(ng-show='attendances && attendances.length')
           thead
             tr
               th 번호
               th 티켓 번호
               th 사용자 이름
               th 시각
-              th 인정 여부
           tbody
             tr(ng-repeat='attendance in attendances')
               td {{ attendance.attendanceId }}
               td {{ attendance.ticketId }}
               td {{ attendance.userName }}
               td {{ attendance.timestamp | dateLocal }}
-              td {{ attendance.accepted ? '예' : '아니오' }}
       tab(heading='출석부')
         p(ng-show='!records') 불러오는 중
-        table(ng-show='records')
+        p(ng-show='records && !records.length') 결과가 없습니다.
+        table.table(ng-show='records && records.length')
           thead
             tr
               th 시각
-              th 티켓 사용 번호
               th 사용자 이름
-              th 판정
           tbody
             tr(ng-repeat='record in records')
               td {{ record.timestamp }}
-              td {{ record.attendanceId }}
               td {{ record.userName }}
-              td {{ record.judgement }}
